--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real-time Pose Estimation</title>
+    <style>
+        video {
+            display: none; /* video要素を非表示にする */
+        }
+    </style>
 </head>
 <body>
     <video id="video" width="640" height="480" autoplay></video>
